[gd_scene load_steps=3 format=3 uid="uid://cruewo5fsh0ns"]

[ext_resource type="Script" uid="uid://dimm8o77nrum1" path="res://scripts/globals/settings_icon.gd" id="1_knx0a"]
[ext_resource type="Texture2D" uid="uid://bbb3yar7vfie3" path="res://assets/sprites/icons/settings-icon.svg" id="2_1jmkx"]

[node name="SettingsIcon" type="CanvasLayer"]
script = ExtResource("1_knx0a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1043.0
offset_top = 582.0
offset_right = 1107.0
offset_bottom = 646.0
scale = Vector2(0.4, 0.4)

[node name="ToggleSettingsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1jmkx")

[connection signal="pressed" from="VBoxContainer/ToggleSettingsButton" to="." method="_on_toggle_settings_button_pressed"]
